# waap

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/waap/: SKILL.md
.agents/skills/waap-heat-equation-e2e-test/: SKILL.md
.claude/skills/: waap  waap-heat-equation-e2e-test
.waap/agents/aa-0225cb1a/: agent.md  work_log.md
.waap/agents/aa-07abb0d5/: agent.md  work_log.md
.waap/agents/aa-144bc365/: agent.md  work_log.md
.waap/agents/aa-1749d45f/: agent.md
.waap/agents/aa-18d6340c/: agent.md
.waap/agents/aa-1afeeb19/: agent.md
.waap/agents/aa-1c46b100/: agent.md
.waap/agents/aa-23aeb042/: agent.md  work_log.md
.waap/agents/aa-2a65705b/: agent.md
.waap/agents/aa-2ccd37d1/: agent.md  work_log.md
.waap/agents/aa-2f4a1b91/: agent.md
.waap/agents/aa-33a143ca/: agent.md
.waap/agents/aa-3dc34c96/: agent.md
.waap/agents/aa-3e9dcb2f/: agent.md
.waap/agents/aa-40923135/: agent.md
.waap/agents/aa-49c6df3c/: agent.md
.waap/agents/aa-4c6a6892/: agent.md  work_log.md
specs/: agent-system-backend.md  codex-agent-system.md  spec.md  ticket_dependencies.md
src/: agent.rs  app.rs  check.rs  claude.rs  cli.rs  codex.rs  frontmatter.rs  git.rs  ids.rs  init.rs  main.rs  mutation.rs  opencode.rs  process.rs  record.rs  root.rs  test_git.rs  ticket.rs  toml.rs
src/agent/: backend.rs  claude.rs  codex.rs  get.rs  list.rs  new.rs  opencode.rs  run.rs  stop.rs  update.rs
src/ticket/: get.rs  list.rs  new.rs  update.rs
tests/: agent_instructions.rs  root_and_validation.rs  state_commits.rs
tests/common/: mod.rs
(+208 files in other folders)
