[package]
name = "waap"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
